--- a/events.html
+++ b/events.html
@@ -35,10 +35,10 @@
         <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
+                    <a class="nav-link" href="aboutus.html">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Recruitment</a>
+                    <a class="nav-link" href="recruitment.html">Recruitment</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="events.html">Events</a>
@@ -164,13 +164,22 @@
       </div>
     </div>
 
-  <!--FOOTER START -->   
+<!--FOOTER START -->   
   <footer class="py-3" style="background-color:#FEA17E">
     <div class="container">
       <div class="row">
         
         <div class="col-sm-4">
-          <div class="footer-text1">Delta Delta Delta <br> Gamma Lambda <br><br>University of California,<br>San Diego</div>
+          <div class="footer-text1">
+            Delta Delta Delta 
+            <br> 
+            <div class="gamma-lambda">
+              Gamma Lambda 
+            </div>
+            University of California,
+            <br>
+            San Diego
+          </div>
         </div>
 
         <div class="col-sm-4 login">
@@ -191,15 +200,25 @@
         <div class="col-sm-4">
           <div class="footer-text2">Follow UCSD Tri Delta</div>
           <div class="social-media">
-            <i class="fab fa-facebook-f"></i>
             <i class="fab fa-instagram"></i>
-            <i class="fab fa-tumblr"></i>
+            <i class="fab fa-facebook-f"></i>
             <i class="fab fa-pinterest-p"></i>
+            <i class="fab fa-tumblr"></i>
             <i class="fab fa-twitter"></i>
           </div>
+          <div class="contact-us">
+            Contact Us!
+          </div>
+          <div class="vppr-email">
+            ucsd.ddd.vppr@gmail.com
+          </div>
         </div><!--col-sm-4-->
+      </div> <!--row-->
 
-      </div><!--row-->
+      <div class="copy-right"><!--row-->
+        &copy; Copyright Group Interactive Networks (GIN) | Delta Delta Delta
+      </div>
+
     </div> <!--container-->
   </footer>
   <!-- FOOTER END -->
