--- a/leadership.html
+++ b/leadership.html
@@ -45,7 +45,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Recruitment</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="events.html">Events</a>
                 </li>
             </ul>
@@ -62,7 +62,7 @@
 
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="leadership.html">Leadership</a>
                 </li>
                 <li class="nav-item">
@@ -85,10 +85,11 @@
   </div>
 
   <!-- Page Content -->
+<div class="leadershippage">
   <div class="container w3-padding-8">
-    <div class = "w3-container w3-center">
+    <!-- <div class = "w3-container w3-center">
       <h2> Leadership </h2>
-    </div>
+    </div> -->
 
     <!-- Row 1 -->
     <div class="w3-cell-row w3-padding-48">
@@ -278,19 +279,25 @@
         </div>
         </div>
       </div>
-
-
-
-
     </div>
+  </div>
 
-  <!--FOOTER START -->   
+<!--FOOTER START -->   
   <footer class="py-3" style="background-color:#FEA17E">
     <div class="container">
       <div class="row">
         
         <div class="col-sm-4">
-          <div class="footer-text1">Delta Delta Delta <br> Gamma Lambda <br><br>University of California, San Diego</div>
+          <div class="footer-text1">
+            Delta Delta Delta 
+            <br> 
+            <div class="gamma-lambda">
+              Gamma Lambda 
+            </div>
+            University of California,
+            <br>
+            San Diego
+          </div>
         </div>
 
         <div class="col-sm-4 login">
@@ -311,17 +318,28 @@
         <div class="col-sm-4">
           <div class="footer-text2">Follow UCSD Tri Delta</div>
           <div class="social-media">
-            <i class="fab fa-facebook-f"></i>
             <i class="fab fa-instagram"></i>
-            <i class="fab fa-tumblr"></i>
+            <i class="fab fa-facebook-f"></i>
             <i class="fab fa-pinterest-p"></i>
+            <i class="fab fa-tumblr"></i>
             <i class="fab fa-twitter"></i>
           </div>
+          <div class="contact-us">
+            Contact Us!
+          </div>
+          <div class="vppr-email">
+            ucsd.ddd.vppr@gmail.com
+          </div>
         </div><!--col-sm-4-->
+      </div> <!--row-->
 
-      </div><!--row-->
+      <div class="copy-right"><!--row-->
+        &copy; Copyright Group Interactive Networks (GIN) | Delta Delta Delta
+      </div>
+
     </div> <!--container-->
   </footer>
+  <!-- FOOTER END -->
 
       <!-- Bootstrap core JavaScript -->
       <script src="vendor/jquery/jquery.min.js"></script>
