--- a/recruitment.html
+++ b/recruitment.html
@@ -71,13 +71,14 @@
             </ul>
         </div>
     </nav>
+  </div>
 
 <!-- BANNER IMAGE-->
 
   <div class="banner">
       <img class="banner-image" src="./images/events/spiritnight.jpg">
     <div class="banner-text">
-      <p>Events</p>
+      <p>Recruitment</p>
     </div>
   </div>
     <!-- Page Content -->
@@ -86,13 +87,9 @@
       <!-- Page Heading/Breadcrumbs -->
 
 
-<br>
-<br>
-      <h1 class="mt-4 mb-3" style="text-align:center;background:tomato;">Recruitment
-      </h1>
 
 
-
+     <div class="recruitment-section">
       <div class="row">
 
         <!-- Post Content Column -->
@@ -100,44 +97,48 @@
 
           <!-- Preview Image -->
           <img class="img-fluid rounded" src="http://placehold.it/900x600" alt="">
-          <h2 style = "text-align:center;">
+          <div class ="recruitment-chair">
             Contact Info
-
-          </h2>
-          <h3 style = "text-align:center;">
-            EMAIL PLACEHOLDER
-            <BR>
-            PHONE NUMBER
-          </h3>
-      </div>
-         <div class="col-lg-6">
-          <p style="text-align:center">
-            A letter from our
-          </p>
-          <h1 style="text-align:center">
-            Recruitment Chair
-            </h1>
+          </div>
+          <div class = "recruitment-dlm">
+            email @ ucsd.edu
             <br>
-          <p style="text-align:left">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?
-          </p>
-          <p style="text-align:center">
-            Delta Love and Mine, 
-          </p>
-          <h1 style="text-align:center">
-            Name of Recruitment Chair
-          </h1>
-          <p style="text-align:center">
-            Recruitment Chair  
-          </p>
+            (xxx) - xxx xxxx
+          </div>
         </div>
-      <!-- /.row -->
-    </div>
+        
+        <div class="col-lg-6">
+          <div class ="recruitment-dlm">
+            A letter from our
+          </div>
+          <div class = "recruitment-chair">
+            Recruitment Chair
+            </div>
+            <br>
+          <div class="recruitment-body">
+            Welcome to Tri Delta at UCSD! I would like to invite you to take a look around and see exactly what makes this chapter such an incredible home for my sisters and me. The Gamma Lambda chapter here at UCSD is full of talented, brilliant women with resounding dedication to each other and an outstanding drive to succeed. 
+            We are brave, bold, and kind to each other, our Panhellenic sisters, and the UCSD community. We are passionate about service and striving to be the best versions of ourselves. And we are dedicated to helping women live, learn, and lead.
+            I hope my sisters and I can provide an authentic opportunity for you to Bring You, your hopes, aspirations, failures, and successes. As the Recruitment Chair of the Tri Delta chapter at UCSD I can say with the utmost certainty that I’ve never encountered such an incredibly funny, witty, and compassionate group of young women. They truly embody our values of truth, self sacrifice, and friendship. Welcome to our chapter and I hope you experience the love and kindness of women I am honored to call sisters. 
 
-          <h1 class="mt-4 mb-3" style="text-align:center;background:pink"> Formal Recruitment
+          </div>
+          <div class="recruitment-dlm">
+            Delta Love and Mine, 
+          </div>
+          <h4 style="text-align:center">
+            Delilah Kline
+          </h4>
+          <div class="recruitment-dlm">
+            Recruitment Chair  
+          </div>
+        </div>
+
+
+      <!-- /.row -->
+      </div>
+
+    <div>
+
+          <h1 class="mt-4 mb-3" style="text-align:center;background:#FEA17E"> Formal Recruitment
           </h1>
             <div class="row">
               <div class="col-lg-3">
@@ -145,8 +146,8 @@
               <div class = "col-lg-6">
 
 
-                <p style="text-align:left;">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore? Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                <p class = "recruitment-body" style="text-align:left;">
+                 This is where information regarding the recruitment process will go. It have provide information about recruitment events, event times, event locations, and the general time-line of the recruitment process.
 
 
                 </p>
@@ -157,23 +158,22 @@
                 
             </div>
 
-          <h1 class="mt-4 mb-3" style="text-align:center;background:pink"> Current Open Bidding
+          <h1 class="mt-4 mb-3" style="text-align:center;background:#FEA17E"> Current Open Bidding
           </h1>
-               <div class="row">
+            <div class="row">
                 <div class = "col-lg-3">
                 </div>
 
               <div class="col-lg-6">
-                <p style="text-align:left;">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore? Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-
+                <p class= "recruitment-body" style="text-align:left;">
+                  This is also known as Informal Recruitment. Although most sororities finish the recruitment process after Fall Quarter, TriDelta continues to recruit in Winter or Spring. This section will provide information on how to continue the recruitment process during Winter or Spring for the prospective members.
 
                 </p>
-                </div>
+              </div>
             </div>
-
+          </div>
     <!-- /.container -->
-
+</div>
 
    <!--FOOTER START -->   
   <footer class="py-3" style="background-color:#FEA17E">
