--- a/sisterhood.html
+++ b/sisterhood.html
@@ -44,10 +44,10 @@
         <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
+                    <a class="nav-link" href="aboutus.html">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Recruitment</a>
+                    <a class="nav-link" href="recruitment.html">Recruitment</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="events.html">Events</a>
@@ -116,15 +116,15 @@
               <!-- The slideshow -->
               <div class="carousel-inner polaroid">
                 <div class="carousel-item active">
-                  <p>Sarah, Dec '02</p>
+                  <p>Winter '16</p>
                   <img src="./images/sisterhood/biglil2.png" alt="Los Angeles" width="1100" height="500">
                 </div>
                 <div class="carousel-item">
-                  <p>Sarah, Dec '02</p>
+                  <p>Winter '16</p>
                   <img src="./images/sisterhood/biglil2.png" alt="Chicago" width="1100" height="500">
                 </div>
                 <div class="carousel-item">
-                  <p>Sarah, Dec '02</p>
+                  <p>Winter '16</p>
                   <img src="./images/sisterhood/biglil2.png" alt="New York" width="1100" height="500">
                 </div>
               </div>
@@ -149,11 +149,11 @@
             <div id="demo" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner polaroid">
                 <div class="carousel-item active">
-                  <p>Sarah, Dec '02</p>
+                  <p>Coachella '17</p>
                   <img src="./images/sisterhood/retreat3.png" alt="Los Angeles" width="1100" height="500">
                 </div>
                 <div class="carousel-item">
-                  <p>Sarah, Dec '02</p>
+                  <p>Coachella '17</p>
                   <img src="./images/sisterhood/retreat3.png" alt="Chicago" width="1100" height="500">
                 </div>
                 <div class="carousel-item">
@@ -182,15 +182,15 @@
                 <!-- The slideshow -->
                   <div class="carousel-inner polaroid">
                     <div class="carousel-item active">
-                      <p>Sarah, Dec '02</p>
+                      <p>Library Walk '18</p>
                       <img src="./images/sisterhood/date1.png" alt="Los Angeles" width="1100" height="500">
                     </div>
                     <div class="carousel-item">
-                      <p>Sarah, Dec '02</p>
+                      <p>Library Walk '18</p>
                       <img src="./images/sisterhood/date1.png" alt="Chicago" width="1100" height="500">
                     </div>
                     <div class="carousel-item">
-                      <p>Sarah, Dec '02</p>
+                      <p>Library Walk '18</p>
                       <img src="./images/sisterhood/date1.png" alt="New York" width="1100" height="500">
                   </div>
                 </div>
@@ -210,7 +210,16 @@
       <div class="row">
         
         <div class="col-sm-4">
-          <div class="footer-text1">Delta Delta Delta <br> Gamma Lambda <br><br>University of California,<br>San Diego</div>
+          <div class="footer-text1">
+            Delta Delta Delta 
+            <br> 
+            <div class="gamma-lambda">
+              Gamma Lambda 
+            </div>
+            University of California,
+            <br>
+            San Diego
+          </div>
         </div>
 
         <div class="col-sm-4 login">
@@ -231,15 +240,25 @@
         <div class="col-sm-4">
           <div class="footer-text2">Follow UCSD Tri Delta</div>
           <div class="social-media">
-            <i class="fab fa-facebook-f"></i>
             <i class="fab fa-instagram"></i>
-            <i class="fab fa-tumblr"></i>
+            <i class="fab fa-facebook-f"></i>
             <i class="fab fa-pinterest-p"></i>
+            <i class="fab fa-tumblr"></i>
             <i class="fab fa-twitter"></i>
           </div>
+          <div class="contact-us">
+            Contact Us!
+          </div>
+          <div class="vppr-email">
+            ucsd.ddd.vppr@gmail.com
+          </div>
         </div><!--col-sm-4-->
+      </div> <!--row-->
 
-      </div><!--row-->
+      <div class="copy-right"><!--row-->
+        &copy; Copyright Group Interactive Networks (GIN) | Delta Delta Delta
+      </div>
+
     </div> <!--container-->
   </footer>
   <!-- FOOTER END -->
