--- a/leadership.html
+++ b/leadership.html
@@ -40,10 +40,10 @@
         <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
+                    <a class="nav-link" href="aboutus.html">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Recruitment</a>
+                    <a class="nav-link" href="recruitment.html">Recruitment</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="events.html">Events</a>
@@ -52,7 +52,7 @@
         </div>
 
         <div class="mx-auto order-0">
-            <a class="navbar-brand mx-auto" href="template.html">
+            <a class="navbar-brand mx-auto" href="index.html">
               <img src = "images/logo.png" class = "logo-margin w3-hover-opacity" width="100" alt="logo thing">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
