--- a/aboutus.html
+++ b/aboutus.html
@@ -42,7 +42,7 @@
             <a class="nav-link " href="aboutus.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Recruitment</a>
+            <a class="nav-link" href="recruitment.html">Recruitment</a>
           </li>
           <li class="nav-item ">
             <a class="nav-link" href="events.html">Events</a>
@@ -51,7 +51,7 @@
       </div>
 
       <div class ="mx-auto order-0">
-        <a class ="navbar-brand mx-auto" href ="template.html">
+        <a class ="navbar-brand mx-auto" href ="index.html">
           <img src ="images/logo.png" class ="logo-margin w3-hover-opacity" width="100" alt="logo thing">
         </a>
         <button class ="navbar-toggler" type ="button" data-toggle="collapse" data-target= ".dual-collapse2">
@@ -148,6 +148,9 @@
     </div>
   </div>
 
+    <div class="w3-container w3-center w3-mobile" style = "padding-top: 20px">
+      <h6>Symbols & Emblems</h6>
+    </div>
   <div class="w3-content w3-display-container">
 
     <div class="mySlides">
