--- a/sisterhood.html
+++ b/sisterhood.html
@@ -56,7 +56,7 @@
         </div>
 
         <div class="mx-auto order-0">
-            <a class="navbar-brand mx-auto" href="template.html">
+            <a class="navbar-brand mx-auto" href="index.html">
               <img src = "images/logo.png" class = "logo-margin w3-hover-opacity" width="100" alt="logo thing">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
