--- a/recruitment.html
+++ b/recruitment.html
@@ -175,13 +175,29 @@
     <!-- /.container -->
 </div>
 
-   <!--FOOTER START -->   
+
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  </body>
+  <!--FOOTER START -->   
   <footer class="py-3" style="background-color:#FEA17E">
     <div class="container">
       <div class="row">
         
         <div class="col-sm-4">
-          <div class="footer-text1">Delta Delta Delta <br> Gamma Lambda <br><br>University of California,<br>San Diego</div>
+          <div class="footer-text1">
+            Delta Delta Delta 
+            <br> 
+            <div class="gamma-lambda">
+              Gamma Lambda 
+            </div>
+            University of California,
+            <br>
+            San Diego
+          </div>
         </div>
 
         <div class="col-sm-4 login">
@@ -202,23 +218,27 @@
         <div class="col-sm-4">
           <div class="footer-text2">Follow UCSD Tri Delta</div>
           <div class="social-media">
-            <i class="fab fa-facebook-f"></i>
             <i class="fab fa-instagram"></i>
-            <i class="fab fa-tumblr"></i>
+            <i class="fab fa-facebook-f"></i>
             <i class="fab fa-pinterest-p"></i>
+            <i class="fab fa-tumblr"></i>
             <i class="fab fa-twitter"></i>
           </div>
+          <div class="contact-us">
+            Contact Us!
+          </div>
+          <div class="vppr-email">
+            ucsd.ddd.vppr@gmail.com
+          </div>
         </div><!--col-sm-4-->
+      </div> <!--row-->
 
-      </div><!--row-->
+      <div class="copy-right"><!--row-->
+        &copy; Copyright Group Interactive Networks (GIN) | Delta Delta Delta
+      </div>
+
     </div> <!--container-->
   </footer>
   <!-- FOOTER END -->
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  </body>
 
 </html>
