--- a/leadership.html
+++ b/leadership.html
@@ -111,7 +111,7 @@
         <!-- Quote -->
         <div class="w3-panel w3-leftbar">
           <h5><i class="fa fa-quote-left w3-large"></i>
-            <i class="w3-serif w3-large">This is where a couple of sentences from the officer will be explaining their favorite memory about Tri Delta.</i>
+            <i class="w3-serif w3-large">My favorite memory is all the joking around we got to do during recruitment.</i>
             <i class="fa fa-quote-right w3-large"></i>
           </h5>
         </div>
@@ -150,7 +150,7 @@
         <div class = "w3-container">
 
           Major: International Business <br>
-          Hometown: Santa Cruz <br>
+          Hometown: Santa Cruz, CA <br>
           Year: Second <br>
           Email: ucsd.ddd.vpa@gmail.com <br>
 
@@ -217,7 +217,7 @@
 
           Major: Policial Science/International Relations <br>
           Minor: Environmental Science <br>
-          Hometown: Huntington Beach <br>
+          Hometown: Sacramento, CA <br>
           Year: Second <br>
           Email: ucsd.ddd.vppr@gmail.com <br>
 
@@ -237,16 +237,17 @@
         <!-- Quote -->
         <div class="w3-panel w3-leftbar">
           <h5><i class="fa fa-quote-left w3-large"></i>
-            <i class="w3-serif w3-large">This is where a couple of sentences from the officer will be explaining their favorite memory about Tri Delta.</i>
+            <i class="w3-serif w3-large">I loved my new member retreat because it was an amazing bonding experience. I got to know pledge class even better!</i>
             <i class="fa fa-quote-right w3-large"></i>
           </h5>
         </div>
 
         <div class = "w3-container">
 
-          Major: International Business <br>
-          Hometown: Huntington Beach <br>
-          Year: Second <br>
+          Major: Math/Economics <br>
+          Minor: Accounting <br>
+          Hometown: Los Angeles, CA <br>
+          Year: Third <br>
           Email: ucsd.ddd.vpf@gmail.com <br>
 
         </div>
